--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,12 @@
     <meta name="description" content="Vue.js Admin Dashboard Template built with vue-router, vuex and bootstrap 4">
     <meta name="keywords" content="vue admin, vue admin template, vue dashboard, vue.js admin dashboard, vue template, vue.js theme">
     <meta name="author" content="Flatlogic LLC">
+    <link rel="icon" type="image/png" href="./images/logo.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta name="description" content="Modern PWA Weather React Application" />
+    <link rel="apple-touch-icon" href="./images/logo.png" />
+    <link rel="manifest" href="./manifest.json" />
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-36759672-9"></script>
     <script>
@@ -24,7 +30,17 @@
     <noscript>
       <strong>Nous sommes désolés mais vue-cli ne fonctionne pas correctement si JavaScript est activé. Veuillez l'activer pour continuer.</strong>
     </noscript>
-    <div id="app"></div>
+    <div id="app">
+      <script>
+          if('serviceWorker' in navigator) {
+              window.addEventListener('load', () => {
+                  navigator.serviceWorker.register('./serviceworker.js')
+                      .then((reg) => console.log('Success: ', reg.scope))
+                      .catch((err) => console.log('Failure: ', err));
+              })
+          }
+      </script>
+    </div>
     <!-- built files will be auto injected -->
   </body>
 </html>
